--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "backend": "npx ampx sandbox"
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.1.12",
